--- a/index.html
+++ b/index.html
@@ -3,42 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Custom Search Page</title>
+    <title>Coming Soon</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
+        :root {
+            --primary-color: #004080;
+            --secondary-color: #ffffff;
+            --background-gradient: linear-gradient(135deg, #0073e6, #004080);
+        }
+
+        body, html {
             margin: 0;
             padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        header {
-            background-color: #f8f8f8;
             width: 100%;
-            padding: 20px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background: var(--background-gradient);
+            font-family: Arial, sans-serif;
+            color: var(--secondary-color);
+        }
+
+        .coming-soon {
             text-align: center;
         }
-        main {
-            flex: 1;
-            width: 100%;
-            max-width: 800px;
-            margin: 20px;
+
+        .coming-soon h1 {
+            font-size: 3rem;
+            margin: 0;
         }
-        .gcse-searchbox-only {
-            width: 100%;
+
+        .coming-soon p {
+            font-size: 1.5rem;
+        }
+
+        @media (max-width: 768px) {
+            .coming-soon h1 {
+                font-size: 2.5rem;
+            }
+
+            .coming-soon p {
+                font-size: 1.2rem;
+            }
         }
     </style>
-    <!-- Google Custom Search Engine script -->
-    <script async src="https://cse.google.com/cse.js?cx=d27b519c063854031"></script>
 </head>
 <body>
-    <header>
-        <h1>Search Page</h1>
-    </header>
-    <main>
-        <div class="gcse-searchbox-only"></div>
-    </main>
+    <div class="coming-soon">
+        <h1>Coming Soon</h1>
+        <p>We're working hard to bring you something amazing!</p>
+    </div>
 </body>
 </html>
